# ros2craft_interfaces

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: docs.yml
msg/: MCRawRobotData.msg
srv/: FactoryReq.srv  GetPlayerPosition.srv  GetRobotInventory.srv
